syntax = "proto3";

import "google/protobuf/empty.proto";

package productService;

service ProductService {
    rpc findAll(UsersParams) returns (ProductsResponse);
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    int32 cost = 4;
    double weight = 5;
    int32 guarantee = 6;
}

message ProductsResponse {
    repeated Product products = 1;
}

message UsersParams {}


